--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,21 @@
-name: Parcel build to docs/ folder
+name: Build & Deploy
 
 on:
   push:
     branches: [ master ]
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the site
-      run: yarn run build
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+
+      - name: Build 🔧
+        run: yarn run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          branch: gh-pages
+          folder: docs
