--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "anastasia-surikova-web",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:misslecter/Anastasiasurikova.com.git",
+  "repository": "git@github.com:misslecter/anastasiasurikova.com.git",
   "author": "anastasia <surikova.anastasia@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html --out-dir docs --public-url ."
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10",
+    "sass": "^1.32.7"
   }
 }
