--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "parcel build index.html --out-dir docs --public-url ."
   },
   "devDependencies": {
-    "cssnano": "^4.1.10",
-    "sass": "^1.32.7"
+    "@parcel/packager-raw-url": "^2.0.1",
+    "@parcel/transformer-sass": "^2.0.1",
+    "@parcel/transformer-webmanifest": "^2.0.1",
+    "parcel": "^2.0.1"
   }
 }
