--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel index.html",
-    "build": "parcel build index.html --out-dir docs --public-url ."
+    "build": "parcel build index.html --public-url ."
   },
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.0.1",
