--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,9 @@ jobs:
         uses: actions/checkout@v2.3.1
 
       - name: Build 🔧
-        run: yarn run build
+        run: |
+        yarn install
+        yarn run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.0.0
